--- a/css/style.css
+++ b/css/style.css
@@ -214,69 +214,80 @@
 }
 
 .underline{
-
+    text-decoration: underline;
 }
 
 .line-trough{
-
+    text-decoration: line-through;
 }
 
 .remover-underline{
-
+    text-decoration: none;
+    color: red;
 }
 
 .upper{
-
+    text-transform: uppercase;
 }
 
 .lower{
-
+    text-transform: lowercase;
 }
 
 .spacing{
-
+    letter-spacing: 5px;
 }
 
 .serif{
-
+    font-family: Georgia;
 }
 
 .sans-serif{
-
+    font-family: Helvetica;
 }
 
 .monospace{
-
+    font-family: "Courtier New";
 }
 
 .cursive{
-
+    font-family: cursive;
 }
 
 .fantasy{
-
+    font-family: fantasy;
 }
 
 .italic{
-
+    font-style: italic;
 }
 
 .oblique{
+    font-style: oblique;
+    
+}
 
+.thin, .bold, .bolder{
+    font-family: Helvetica;
 }
 
 .thin{
-
+    font-weight: 100;
 }
 
 .bold{
+    font-weight: 600;
 
+}
+
+.bolder{
+    font-weight: 900;
 }
 
 .small{
-
+    font-size: 6px;
 }
 
 .big{
-
+    font-size: 78px;
 }
